# pong

./: .gitignore  CMakeLists.txt  README.md  SfLine.h  ball.cpp  ball.h  bot.cpp  bot.h  collisionidentifier.h  constants.h  main.cpp  paddle.cpp  paddle.h  solver.cpp  solver.h
client/: CMakeLists.txt  main.cpp  msg_type.cpp  msg_type.h
server/: CMakeLists.txt  ball.cpp  ball.h  main.cpp  msg_type.h  paddle.cpp  paddle.h
